src/styles/Messages.scss
@import "./App.scss";

#messages--component {
  height: calc(100% - #{$textArea-height});
  overflow-y: auto;
  padding: 0 20px;
}

.messages--message {
  border-radius: 16px;
  margin: 8px 0;
  padding: 6px 16px;
  border: 1px solid #e3e3e3;

  &.user {
    background-color: $color-secondary;
  }

  &.member {
    background-color: $color-white;
  }
}

.messages--header {
  background-color: $color-light-gray;
}

